# mcp-file-converter

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  server.py
helpers/: __init__.py  convert_docx.py  convert_pdf.py  docx_to_pdf.py  files_list.py  pdf_to_docx.py
tests/: test_docx_to_pdf.py  test_file.docx  test_files_list.py  test_pdf_to_docx.py
tools/: __init__.py  docx_to_pdf_tool.py  pdf_to_docx_tool.py
